--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "service-worker-loader": "^3.3.1",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.10"
-  }
+  },
+  "dependencies": {}
 }
